fix: add letter-spacing for clues

--- a/Nonograms/styles/_grid.scss
+++ b/Nonograms/styles/_grid.scss
@@ -175,6 +175,7 @@
   box-sizing: border-box;
   border-bottom-left-radius: 10px;
   font-weight: 500;
+  letter-spacing: 2px;
 }
 
 .rowClue {
